http://jira.bytatech.com:8080/browse/IN-10046,http://jira.bytatech.com:8080/browse/IN-10064

--- a/src/main/resources/templates/createxam.html
+++ b/src/main/resources/templates/createxam.html
@@ -46,7 +46,7 @@
     <h1 align="center">TECHQUIZ</h1>
     <h3 align="center">Create Exam</h3>
 </div>
-<form action="#" th:action="@{/createxam}"
+<form action="#" th:action="@{/saveexam}"
 						th:object="${exam}" method="GET">
 
 					<div class="row">
