--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head  th:replace="fragments/head :: headerFragment">
-<meta charset="ISO-8859-1">
+<head>
+<meta charset="utf-8">
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+	<link rel="stylesheet"
+	href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+	integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
 	crossorigin="anonymous">
 <title>Add User</title>
 <style>
@@ -47,43 +51,42 @@
 		<div class="card">
 			<div class="card-body">
 				<div class="col-md-10">
-					<form action="#" th:action="@{/add}"
-						th:object="${exam}" method="GET">
+					<form 
+						th:object="${question}" method="GET">
 						<div class="row">
 							<div class="form-group col-md-8">
 								<label for="question" class="col-form-label">Question</label> <input
-									type="text" th:field="*{question}" class="form-control" 
+									type="text" id="quest" th:field="*{question}" class="form-control" 
 									placeholder="Question"> 
 							</div>
 			
 							<div class="form-group col-md-8">
-							<label for="level" class="col-form-label">Level</label>
-							<select name="level" th:field="*{level}"  class="select button2 lengthbtn"  >
-								<option th:value="easy">EASY</option>
-								<option th:value="medium">MEDIUM</option>
-								<option th:value="hard">HARD</option>
+							<label for="question" class="col-form-label">Level of Question</label>
+							<select name="questionlevel">
+    						<option th:each="levelOp : ${T(com.lxisoft.domain.enumeration.QuestionLevel).values()}" 
+        					th:value="${levelOp}" th:text="${levelOp}"></option>
 							</select>
 							</div>
 			
 			
 							<div class="form-group col-md-8">
 								<label for="answer" class="col-form-label">Option1</label> <input
-									type="text" th:field="*{option1}" class="form-control" 
+									type="text" id="opt1" th:field="*{qnOptions}" class="form-control" 
 									placeholder="Option1"> 
 							</div>
 							<div class="form-group col-md-8">
 								<label for="option1" class="col-form-label">Option2</label> <input
-									type="text" th:field="*{option2}" class="form-control" 
+									type="text" id="opt2" th:field="*{qnOptions}" class="form-control" 
 									placeholder="Option2"> 
 							</div>
 							<div class="form-group col-md-8">
 								<label for="answer" class="col-form-label">Option3</label> <input
-									type="text" th:field="*{option3}" class="form-control" 
+									type="text" id="opt3" th:field="*{qnOptions}" class="form-control" 
 									placeholder="Option3"> 
 							</div>
 							<div class="form-group col-md-8">
 								<label for="answer" class="col-form-label">Option4</label> <input
-									type="text" th:field="*{option4}" class="form-control" 
+									type="text" id="opt2" th:field="*{qnOptions}" class="form-control" 
 									placeholder="Option4"> 
 							</div>
 							<div class="form-group col-md-8">
