--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -51,8 +51,8 @@
                     th:object="${question}" method="GET">
                     <div class="row">
                         <div class="form-group col-md-8">
-                            <label for="question" class="col-form-label">Question</label> <input
-                            type="text" id="quest" th:field="*{question}" class="form-control"
+                            <label for="question" class="col-form-label">Question</label>
+                            <input type="text" id="quest" th:field="*{question}" class="form-control"
                             placeholder="Question">
                         </div>
 
@@ -66,23 +66,23 @@
 
 
                         <div class="form-group col-md-8">
-                            <label for="answer" class="col-form-label">Option1</label> <input
+                            <label for="opt1" class="col-form-label">Option1</label> <input
                             type="text" id="opt1" th:field="*{qnOptions}" class="form-control"
                             placeholder="Option1">
                         </div>
                         <div class="form-group col-md-8">
-                            <label for="option1" class="col-form-label">Option2</label> <input
+                            <label for="opt2" class="col-form-label">Option2</label> <input
                             type="text" id="opt2" th:field="*{qnOptions}" class="form-control"
                             placeholder="Option2">
                         </div>
                         <div class="form-group col-md-8">
-                            <label for="answer" class="col-form-label">Option3</label> <input
+                            <label for="opt3" class="col-form-label">Option3</label> <input
                             type="text" id="opt3" th:field="*{qnOptions}" class="form-control"
                             placeholder="Option3">
                         </div>
                         <div class="form-group col-md-8">
-                            <label for="answer" class="col-form-label">Option4</label> <input
-                            type="text" id="opt2" th:field="*{qnOptions}" class="form-control"
+                            <label for="opt4" class="col-form-label">Option4</label> <input
+                            type="text" id="opt4" th:field="*{qnOptions}" class="form-control"
                             placeholder="Option4">
                         </div>
                         <div class="form-group col-md-8">
