--- a/src/main/resources/templates/techquiz.html
+++ b/src/main/resources/templates/techquiz.html
@@ -44,11 +44,13 @@
 <body>
 <div class="header">
     <h1>MOCK EXAM</h1>
-    <h3>
-        <a href="newquestion">ADD</a>
+    <h3 align="right"> <a href="createxam">Create Exam</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp; <a href="newquestion">ADD Question</a></h3>
+       
     </h3>
 </div>
-
-<center><a href="newquestion"><input type="submit" class="button" value=Submit></button></center>
+<br>
+<br>
+<center><a href="techquiz"><input type="submit" class="button" value=Back></button></center>
 </body>
 </html>
