--- a/src/main/resources/templates/createxam.html
+++ b/src/main/resources/templates/createxam.html
@@ -74,7 +74,7 @@
 							
 							
 			
-							<center><input type="submit" class="button" value=Submit></a></center>
+							<center><a href="techquiz"><input type="submit" class="button" value=Submit></a></center>
 					</div>
 	</div>
 </body>
