http://jira.bytatech.com:8080/browse/IN-10122,http://jira.bytatech.com:8080/browse/IN-10125

--- a/src/main/resources/templates/questionview.html
+++ b/src/main/resources/templates/questionview.html
@@ -49,7 +49,11 @@
 <form th:object="${question}">   
 <a th:text = "${question.question}"></a><br>
 
-  <div align = "center"><button class="button">NEXT</button></div>
+	            <th:each="q_option : ${question.qstnOptions}">
+	            	<th:text="${q_option.option}">option<br>
+	            	<br>
+	            	
+	            	  <div align = "center"><button class="button">NEXT</button></div>
 </form>
 </body>
 </html>
