http://jira.bytatech.com:8080/browse/IN-10307

--- a/src/main/resources/templates/questionview.html
+++ b/src/main/resources/templates/questionview.html
@@ -3,39 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>viewQuestion</title>
-    <script>
-    // The data/time we want to countdown to
-    var countDownDate = new Date("Jul 25, 2021 16:37:52").getTime();
 
-    // Run myfunc every second
-    var myfunc = setInterval(function() {
-
-    var now = new Date().getTime();
-    var timeleft = countDownDate - now;
-        
-    // Calculating the days, hours, minutes and seconds left
-    var days = Math.floor(timeleft / (1000 * 60 * 60 * 24));
-    var hours = Math.floor((timeleft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    var minutes = Math.floor((timeleft % (1000 * 60 * 60)) / (1000 * 60));
-    var seconds = Math.floor((timeleft % (1000 * 60)) / 1000);
-        
-    // Result is output to the specific element
-    document.getElementById("days").innerHTML = days + "d "
-    document.getElementById("hours").innerHTML = hours + "h " 
-    document.getElementById("mins").innerHTML = minutes + "m " 
-    document.getElementById("secs").innerHTML = seconds + "s " 
-        
-    // Display the message when countdown is over
-    if (timeleft < 0) {
-        clearInterval(myfunc);
-        document.getElementById("days").innerHTML = ""
-        document.getElementById("hours").innerHTML = "" 
-        document.getElementById("mins").innerHTML = ""
-        document.getElementById("secs").innerHTML = ""
-        document.getElementById("end").innerHTML = "TIME UP!!";
-    }
-    }, 1000);
-    </script>
      <style>
 	.button {
   display: inline-block;
@@ -66,7 +34,7 @@
 		padding-left: 80px;
 		padding-bottom: 20px;
 	}
-	
+
 	.header {
   background-color: #ff0080;
   padding: 20px;
@@ -78,14 +46,47 @@
 <div class="header">
 	<h1 align="center">Questions</h1>
 </div>
+<script>
+// Set the date we're counting down to
+var countDownDate = new Date("Jan 5, 2021 15:37:25").getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get today's date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now and the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Output the result in an element with id="demo"
+  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+  + minutes + "m " + seconds + "s ";
+
+  // If the count down is over, write some text
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED";
+  }
+}, 1000);
+</script>
 <br>
-<form th:object="${question}">   
+
+
+<form th:object="${question}">
+
 <a th:text = "${question.question}"></a><br>
 
 	            <th:each="q_option : ${question.qstnOptions}">
 	            	<th:text="${q_option.option}">option<br>
 	            	<br>
-	            	
+
 	            	  <div align = "center"><button class="button">NEXT</button></div>
 </form>
 </body>
