--- a/src/main/webapp/app/entities/exam/exam-detail.component.html
+++ b/src/main/webapp/app/entities/exam/exam-detail.component.html
@@ -22,8 +22,8 @@
                 </dd>
                 <dt><span jhiTranslate="techQuizApp.exam.attendedExam">Attended Exam</span></dt>
                 <dd>
-                    <div *ngIf="exam.attendedExam">
-                        <a [routerLink]="['/attended-exam', exam.attendedExam?.id, 'view']">{{ exam.attendedExam?.id }}</a>
+                    <div *ngIf="exam.attendedExamId">
+                        <a [routerLink]="['/attended-exam', exam.attendedExamId, 'view']">{{ exam.attendedExamId }}</a>
                     </div>
                 </dd>
                 <dt><span jhiTranslate="techQuizApp.exam.question">Question</span></dt>
