--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -33,7 +33,7 @@
 		padding-left: 80px;
 		padding-bottom: 20px;
 	}
-
+	
 	.header {
   background-color: #ff0080;
   padding: 20px;
@@ -43,16 +43,25 @@
 </head>
 <body>
 <div class="header">
-    <h1>MOCK EXAM</h1>
-   <h3 align="right"><a href="viewAll"><input type="submit" class="button" value="Create Exam"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
-    
-      &nbsp;&nbsp;&nbsp;&nbsp; <a href="newquestion"><input type="submit" class="button" value="ADD Question"/></a>
-     </h3>
-       
-    </h3>
-</div>
-<br>
-<br>
+        <h1>TECHQUIZ</h1>
+        <h3>
+        <a href="createxam"><input type="submit" class="button" value="ADD"/></a>
+        </h3>
+		</div>
+		<br>
+    <table align=center border=1px >
+		<th>Name</th>
+		<th>count</th>
+		<th>Level</th>
 
+<tr th:each="list,iterationStatus : ${listExam}"> 
+                <td th:text="${list.name}"></td>
+                <td th:text="${list.count}"></td>
+                 <td th:text="${list.level}"></td>
+                       
+            </tr>   
+        </table>
+    <br>
+<center><a href="http://localhost:8081/techquiz"><input type="submit" class="button" value=Back></button></center>
 </body>
 </html>
