http://jira.bytatech.com:8080/browse/IN-10444

--- a/src/main/resources/templates/selectexam.html
+++ b/src/main/resources/templates/selectexam.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>techquiz</title>
+    <title>selectexam</title>
     <style>
 	.button {
   display: inline-block;
@@ -43,16 +43,15 @@
 </head>
 <body>
 <div class="header">
-    <h1>TECHQUIZ</h1>
-   <h3 align="right"><a href="viewAll"><input type="submit" class="button" value="Create Exam"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
-    
-      &nbsp;&nbsp;&nbsp;&nbsp; <a href="newquestion"><input type="submit" class="button" value="ADD Question"/></a>
-     </h3>
-       
-    </h3>
+    <h1>TechQuiz</h1>
+   <h3> Select Exam  </h3>
 </div>
 <br>
 <br>
-
+ <h3 align=center><input type="submit" class="button" value="EASY"/></h3><br>
+ <h3 align=center><input type="submit" class="button" value="MEDIUM"/></h3><br>
+ <h3 align=center><input type="submit" class="button" value="HARD"/></h3><br>
+<br>
+<center><a href="http://localhost:8081/insruction"><input type="submit" class="button" value=Back></button></center>
 </body>
 </html>
