http://jira.bytatech.com:8080/browse/IN-10476

--- a/src/main/resources/templates/selectexam.html
+++ b/src/main/resources/templates/selectexam.html
@@ -48,9 +48,9 @@
 </div>
 <br>
 <br>
- <h3 align=center><input type="submit" class="button" value="EASY"/></h3><br>
- <h3 align=center><input type="submit" class="button" value="MEDIUM"/></h3><br>
- <h3 align=center><input type="submit" class="button" value="HARD"/></h3><br>
+ <h3 align=center><a href="/viewQuestion"><input type="submit" class="button" value="EASY"/></a></h3><br>
+ <h3 align=center><a href="/viewQuestion"><input type="submit" class="button" value="MEDIUM"/></a></h3><br>
+ <h3 align=center><a href="/viewQuestion"><input type="submit" class="button" value="HARD"/></a></h3><br>
 <br>
 <center><a href="http://localhost:8081/insruction"><input type="submit" class="button" value=Back></button></center>
 </body>
