http://jira.bytatech.com:8080/browse/IN-10136

--- a/src/main/resources/templates/examresult.html
+++ b/src/main/resources/templates/examresult.html
@@ -31,6 +31,6 @@
 		<div style = "padding-left: 100px;">
     		<h1 align="center">Total Mark : <a th:text = "${mark}"></a> </h1>
     	</div> 
-        <center><a href="instruction"><input type="submit" class="button" value=Back></a></center>
+        <center><a href="/userview"><input type="submit" class="button" value=Back></a></center>
 </body>
 </html>
