http://jira.bytatech.com:8080/browse/IN-10543

--- a/src/main/resources/templates/selectexam.html
+++ b/src/main/resources/templates/selectexam.html
@@ -54,6 +54,6 @@
  <h3 align=center><input type="submit" id="lvl" name="option" class="button" value="HARD"/></h3><br>
 </form>
 <br>
-<center><a href="http://localhost:8081/insruction"><input type="submit" class="button" value=Back></button></center>
+<center><a href="http://localhost:8081/instruction"><input type="submit" class="button" value=Back></button></center>
 </body>
 </html>
